--- a/app/src/main/res/layout/fragment_news_top_headlines.xml
+++ b/app/src/main/res/layout/fragment_news_top_headlines.xml
@@ -14,6 +14,7 @@
             android:id="@+id/progressBar"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
